--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
     </a>
     {% if site.show_get_theme_btn %}
         <a href="https://github.com/thiagorossener/jekflix-template" class="get-theme" role="button">
-            Get this theme!
+            播放背景音乐
         </a>
     {% endif %}
 </header>
