--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
         <svg class="icon-search"><use xlink:href="#icon-search"></use></svg>
     </a>
     {% if site.show_get_theme_btn %}
-        <a href="https://github.com/thiagorossener/jekflix-template" class="get-theme" role="button">
+        <a href="https://s19.aconvert.com/convert/p3r68-cdx67/5of2d-eaejr.mp3" class="get-theme" role="button">
             播放背景音乐
         </a>
     {% endif %}
