--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,9 +15,8 @@
         <svg class="icon-search"><use xlink:href="#icon-search"></use></svg>
     </a>
     {% if site.show_get_theme_btn %}
-        <a href="https://s19.aconvert.com/convert/p3r68-cdx67/5of2d-eaejr.mp3" class="get-theme" role="button">
-            播放背景音乐
-        </a>
+        <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 
+         src="//music.163.com/outchain/player?type=2&id=1492021792&auto=1&height=66"></iframe>
     {% endif %}
 </header>
 
