--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
     </a>
     {% if site.show_get_theme_btn %}
         <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 
-         src="//music.163.com/outchain/player?type=2&id=1492021792&auto=1&height=66"></iframe>
+         src="//music.163.com/outchain/player?type=2&id=1492021792&auto=1&height=66"  class="get-theme" role="button"></iframe>
     {% endif %}
 </header>
 
