--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -4,14 +4,14 @@ body {
 }
 
 .bar-header {
-    background-color: $accentDark;
+    background-color: $yellow;
     padding: rem(10px) rem(15px);
     position: fixed;
     left: 0;
     width: 100%;
     z-index: 10;
     transition: top 0.5s, left 0.3s ease, background-color 0.5s, box-shadow 0.5s;
-    opacity: 1.0;
+    opacity: 0.9;
 
     @include media(">=sm") {
         padding: rem(15px) rem(0px);
