--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -1,7 +1,2 @@
-$theme: (
-  themeColor: #ff0a16,
-  primaryDark: #141414,
-  accentDark: #ffffff,
-  lightGray: #f2f2f2,
-  texts: #333333
+$theme: ( themeColor: #ff0a16, primaryDark: #141414, accentDark: #ffffff, lightGray: #f2f2f2, texts: #333333 yellow: #F9F900 
 );
