--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -4,7 +4,7 @@ body {
 }
 
 .bar-header {
-    background-color: $yellow;
+    background-color: $lightGray;
     padding: rem(10px) rem(15px);
     position: fixed;
     left: 0;
