--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -3,8 +3,7 @@ $theme: (
     primaryDark: #141414,
     accentDark: #ffffff,
     lightGray: #f2f2f2,
-    texts: #333333,
-    yellow: #F9F900 
+    texts: #333333
 );
 
 
